# scte35

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  scte35-spec.html
.github/workflows/: ci.yml  release.yml  security.yml
examples/: builder_demo.rs  serde_demo.rs
plans/: BUILDERS_INTEGRATION_TESTS.md  CRC_VALIDATION.md  CREATE_SCTE_EVENT.md  HUMAN_READABLE_UPID.md  MPU_FIX.md  SERDE_SUPPORT.md  SERIALIZATION.md
src/: bit_reader.rs  builders.rs  commands.rs  crc.rs  data.rs  descriptors.rs  fmt.rs  info.rs  lib.rs  main.rs  parser.rs  serde.rs  tests.rs  time.rs  types.rs  upid.rs
src/builders/: CLAUDE.md  commands.rs  descriptors.rs  error.rs  extensions.rs  mod.rs  splice_info_section.rs  tests.rs  time.rs
src/descriptors/: mod.rs  segmentation.rs
src/encoding/: commands.rs  descriptors.rs  error.rs  mod.rs  round_trip_tests.rs  splice_info_section.rs  tests.rs  time.rs  traits.rs  writer.rs
tests/: cli_integration.rs  serde_integration.rs
