[package]
name = "scte35-parsing"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

[features]
default = ["crc-validation", "serde"]
crc-validation = ["crc"]
cli = ["base64", "crc-validation", "clap"]
serde = ["dep:serde", "dep:serde_json", "base64"]

[dependencies]
crc = { version = "3.0", optional = true }
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
base64 = "0.22.1"
serde_json = "1.0"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "scte35-parsing"
required-features = ["cli"]
